--- a/flohmarkt-app/public/index.html
+++ b/flohmarkt-app/public/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inconsolata&display=swap" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/konstant-grotesk" rel="stylesheet">
+
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
